<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="stroke_color">Stroke color        </string>
    <string name="width">Stroke width</string>
    <string name="alpha">Stroke alpha</string>
    <string name="fill_color">Fill color</string>
    <string name="fill_alpha">Fill alpha</string>
    <string name="point_shape_">"Point shape     "</string>
    <string name="point_size">Point size</string>
    <string name="decimation">Decimation</string>
    <string name="decimation_factor_default">0.000001</string>
    <string name="min_zoom">Min zoom</string>
    <string name="max_zoom">Max zoom</string>
    <string name="dash_pattern">Dash pattern</string>
    <string name="label_properties">Label properties</string>
    <string name="toggle_visibility">toggle visibility</string>
    <string name="label_field">label field</string>
    <string name="label_size">label size</string>

    <string name="select_table_types">Select types</string>
    <string name="select_type">Select type</string>
    <string name="remove_from_list">Remove %s from the list?</string>
    <string name="selected_file_no_vector_data">The selected file doesn\'t contain any vector data: </string>
    <string name="adding_new_source">Adding new source...</string>
    <string name="select_spatialite_database">Select spatialite database to add</string>
    <string name="select_spatialite_database_folder">Select spatialite database folder to add</string>
    <string name="loading_databases">Loading databases...</string>
</resources>