<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:padding="5dp" >

    <RelativeLayout
        android:id="@+id/properties_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background"
        android:padding="5dp" >

        <TextView
            android:id="@+id/visibility_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/label_properties"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/main_text_color" />

        <CheckBox
            android:id="@+id/checkVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/visibility_title"
            android:layout_margin="5dp"
            android:text="@string/toggle_visibility"
            android:textColor="@color/main_text_color" />

        <TextView
            android:id="@+id/labelFieldLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkVisibility"
            android:layout_margin="5dp"
            android:text="@string/label_field"
            android:textColor="@color/main_text_color" />

        <Spinner
            android:id="@+id/labelFieldSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelFieldLabel"
            android:layout_margin="5dp" />

        <TextView
            android:id="@+id/fontSizeLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelFieldSpinner"
            android:layout_margin="5dp"
            android:text="@string/label_size"
            android:textColor="@color/main_text_color" />

        <Spinner
            android:id="@+id/fontSizeSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fontSizeLabel"
            android:layout_margin="5dp" />
        <!--
        <CheckBox
            android:id="@+id/checkHalo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/fontSizeSpinner"
            android:layout_margin="5dp"
            android:text="halo"
            android:textColor="@color/main_text_color" />
        -->
    </RelativeLayout>

</ScrollView>